--- a/arch/arm/boot/dts/dsi-panel-amami.dtsi
+++ b/arch/arm/boot/dts/dsi-panel-amami.dtsi
@@ -14,22 +14,22 @@
 
 &mdss_mdp {
 	dsi_novatek_default: somc,novatek_default_panel {
-		qcom,mdss-dsi-panel-name = "default novatek 720p cmd";
+		qcom,mdss-dsi-panel-name = "default novatek 720p vid";
 		qcom,mdss-dsi-panel-controller = <&mdss_dsi0>;
-		qcom,mdss-dsi-panel-type = "dsi_cmd_mode";
+		qcom,mdss-dsi-panel-type = "dsi_video_mode";
 		qcom,mdss-dsi-panel-destination = "display_1";
 		qcom,mdss-dsi-panel-framerate = <60>;
 		qcom,mdss-dsi-virtual-channel-id = <0>;
 		qcom,mdss-dsi-stream = <0>;
 		qcom,mdss-dsi-panel-width = <720>;
 		qcom,mdss-dsi-panel-height = <1280>;
-		qcom,mdss-dsi-h-front-porch = <48>;
-		qcom,mdss-dsi-h-back-porch = <48>;
-		qcom,mdss-dsi-h-pulse-width = <48>;
+		qcom,mdss-dsi-h-front-porch = <136>;
+		qcom,mdss-dsi-h-back-porch = <4>;
+		qcom,mdss-dsi-h-pulse-width = <4>;
 		qcom,mdss-dsi-h-sync-skew = <0>;
-		qcom,mdss-dsi-v-back-porch = <32>;
-		qcom,mdss-dsi-v-front-porch = <32>;
-		qcom,mdss-dsi-v-pulse-width = <32>;
+		qcom,mdss-dsi-v-back-porch = <1>;
+		qcom,mdss-dsi-v-front-porch = <94>;
+		qcom,mdss-dsi-v-pulse-width = <1>;
 		qcom,mdss-dsi-h-left-border = <0>;
 		qcom,mdss-dsi-h-right-border = <0>;
 		qcom,mdss-dsi-v-top-border = <0>;
@@ -43,7 +43,8 @@
 				15 01 00 00 00 00 02 26 00
 				15 01 00 00 00 00 02 FF 00];
 		somc,mdss-dsi-init-command = [15 01 00 00 00 00 02 BA 03
-				15 01 00 00 00 00 02 C2 08
+				15 01 00 00 00 00 02 C2 03
+				39 01 00 00 00 00 06 3B 03 02 03 08 04
 				15 01 00 00 00 00 02 FB 01
 				15 01 00 00 00 00 02 FF 01
 				15 01 00 00 00 00 02 75 00
@@ -422,7 +423,7 @@
 		qcom,mdss-dsi-on-command = [05 01 00 00 00 00 01 29];
 		qcom,mdss-dsi-off-command = [05 01 00 00 00 00 01 28
 				05 01 00 00 78 00 01 10];
-		qcom,mdss-dsi-on-command-state = "dsi_hs_mode";
+		qcom,mdss-dsi-on-command-state = "dsi_lp_mode";
 		qcom,mdss-dsi-off-command-state = "dsi_hs_mode";
 
 		somc,mdss-dsi-cabc-early-on-command = [15 01 00 00 00 00 02 FF 04
@@ -456,12 +457,6 @@
 		qcom,mdss-dsi-lane-1-state;
 		qcom,mdss-dsi-lane-2-state;
 		qcom,mdss-dsi-lane-3-state;
-		qcom,mdss-dsi-te-pin-select = <1>;
-		qcom,mdss-dsi-wr-mem-start = <0x2c>;
-		qcom,mdss-dsi-wr-mem-continue = <0x3c>;
-		qcom,mdss-dsi-te-dcs-command = <1>;
-		qcom,mdss-dsi-te-check-enable;
-		qcom,mdss-dsi-te-using-te-pin;
 		qcom,mdss-dsi-panel-timings = [7a 1a 12 00 3e 42 16 20 14 03 04 00];
 		qcom,mdss-dsi-t-clk-post = <0x0c>;
 		qcom,mdss-dsi-t-clk-pre = <0x1a>;
@@ -492,27 +487,27 @@
 				00 c2 45 00 00 00 00 01 75
 				00 c2 45 00 00 00 00 01 75
 				00 02 45 00 00 00 00 01 97];
-		somc,mdss-dsi-disp-on-in-hs = <0>;
+		somc,mdss-dsi-disp-on-in-hs = <1>;
 		somc,mdss-dsi-init-from-begin = <1>;
 	};
 
-	dsi_novatek_jdc_720_cmd: somc,novatek_jdi_720p_panel {
-		qcom,mdss-dsi-panel-name = "jdi novatek 720p cmd";
+	dsi_novatek_jdc_720_vid: somc,novatek_jdi_720p_panel {
+		qcom,mdss-dsi-panel-name = "jdi novatek 720p vid";
 		qcom,mdss-dsi-panel-controller = <&mdss_dsi0>;
-		qcom,mdss-dsi-panel-type = "dsi_cmd_mode";
+		qcom,mdss-dsi-panel-type = "dsi_video_mode";
 		qcom,mdss-dsi-panel-destination = "display_1";
 		qcom,mdss-dsi-panel-framerate = <60>;
 		qcom,mdss-dsi-virtual-channel-id = <0>;
 		qcom,mdss-dsi-stream = <0>;
 		qcom,mdss-dsi-panel-width = <720>;
 		qcom,mdss-dsi-panel-height = <1280>;
-		qcom,mdss-dsi-h-front-porch = <48>;
-		qcom,mdss-dsi-h-back-porch = <48>;
-		qcom,mdss-dsi-h-pulse-width = <48>;
+		qcom,mdss-dsi-h-front-porch = <136>;
+		qcom,mdss-dsi-h-back-porch = <4>;
+		qcom,mdss-dsi-h-pulse-width = <4>;
 		qcom,mdss-dsi-h-sync-skew = <0>;
-		qcom,mdss-dsi-v-back-porch = <32>;
-		qcom,mdss-dsi-v-front-porch = <32>;
-		qcom,mdss-dsi-v-pulse-width = <32>;
+		qcom,mdss-dsi-v-back-porch = <1>;
+		qcom,mdss-dsi-v-front-porch = <94>;
+		qcom,mdss-dsi-v-pulse-width = <1>;
 		qcom,mdss-dsi-h-left-border = <0>;
 		qcom,mdss-dsi-h-right-border = <0>;
 		qcom,mdss-dsi-v-top-border = <0>;
@@ -526,7 +521,8 @@
 				15 01 00 00 00 00 02 26 00
 				15 01 00 00 00 00 02 FF 00];
 		somc,mdss-dsi-init-command = [15 01 00 00 00 00 02 BA 03
-				15 01 00 00 00 00 02 C2 08
+				15 01 00 00 00 00 02 C2 03
+				39 01 00 00 00 00 06 3B 03 02 03 08 04
 				15 01 00 00 00 00 02 FB 01
 				15 01 00 00 00 00 02 FF 01
 				15 01 00 00 00 00 02 75 00
@@ -905,7 +901,7 @@
 		qcom,mdss-dsi-on-command = [05 01 00 00 00 00 01 29];
 		qcom,mdss-dsi-off-command = [05 01 00 00 00 00 01 28
 				05 01 00 00 78 00 01 10];
-		qcom,mdss-dsi-on-command-state = "dsi_hs_mode";
+		qcom,mdss-dsi-on-command-state = "dsi_lp_mode";
 		qcom,mdss-dsi-off-command-state = "dsi_hs_mode";
 
 		somc,mdss-dsi-cabc-early-on-command = [15 01 00 00 00 00 02 FF 04
@@ -939,12 +935,6 @@
 		qcom,mdss-dsi-lane-1-state;
 		qcom,mdss-dsi-lane-2-state;
 		qcom,mdss-dsi-lane-3-state;
-		qcom,mdss-dsi-te-pin-select = <1>;
-		qcom,mdss-dsi-wr-mem-start = <0x2c>;
-		qcom,mdss-dsi-wr-mem-continue = <0x3c>;
-		qcom,mdss-dsi-te-dcs-command = <1>;
-		qcom,mdss-dsi-te-check-enable;
-		qcom,mdss-dsi-te-using-te-pin;
 		qcom,mdss-dsi-panel-timings = [7a 1a 12 00 3e 42 16 20 14 03 04 00];
 		qcom,mdss-dsi-t-clk-post = <0x0c>;
 		qcom,mdss-dsi-t-clk-pre = <0x1a>;
@@ -974,7 +964,7 @@
 				00 c2 45 00 00 00 00 01 75
 				00 c2 45 00 00 00 00 01 75
 				00 02 45 00 00 00 00 01 97];
-		somc,mdss-dsi-disp-on-in-hs = <0>;
+		somc,mdss-dsi-disp-on-in-hs = <1>;
 		somc,mdss-dsi-init-from-begin = <1>;
 
 		somc,mdss-dsi-uv-command = [04 01 00 00 00 00 01 DA
@@ -1042,23 +1032,23 @@
 				0x07 0x00 0x28 0x3C 0x00 0x13 0x4d00 0x6600 0x5280>;
 	};
 
-	dsi_novatek_auo_720_cmd: somc,novatek_auo_720p_panel {
-		qcom,mdss-dsi-panel-name = "auo novatek 720p cmd";
+	dsi_novatek_auo_720_vid: somc,novatek_auo_720p_panel {
+		qcom,mdss-dsi-panel-name = "auo novatek 720p vid";
 		qcom,mdss-dsi-panel-controller = <&mdss_dsi0>;
-		qcom,mdss-dsi-panel-type = "dsi_cmd_mode";
+		qcom,mdss-dsi-panel-type = "dsi_video_mode";
 		qcom,mdss-dsi-panel-destination = "display_1";
 		qcom,mdss-dsi-panel-framerate = <60>;
 		qcom,mdss-dsi-virtual-channel-id = <0>;
 		qcom,mdss-dsi-stream = <0>;
 		qcom,mdss-dsi-panel-width = <720>;
 		qcom,mdss-dsi-panel-height = <1280>;
-		qcom,mdss-dsi-h-front-porch = <48>;
-		qcom,mdss-dsi-h-back-porch = <48>;
-		qcom,mdss-dsi-h-pulse-width = <48>;
+		qcom,mdss-dsi-h-front-porch = <136>;
+		qcom,mdss-dsi-h-back-porch = <4>;
+		qcom,mdss-dsi-h-pulse-width = <4>;
 		qcom,mdss-dsi-h-sync-skew = <0>;
-		qcom,mdss-dsi-v-back-porch = <32>;
-		qcom,mdss-dsi-v-front-porch = <32>;
-		qcom,mdss-dsi-v-pulse-width = <32>;
+		qcom,mdss-dsi-v-back-porch = <1>;
+		qcom,mdss-dsi-v-front-porch = <94>;
+		qcom,mdss-dsi-v-pulse-width = <1>;
 		qcom,mdss-dsi-h-left-border = <0>;
 		qcom,mdss-dsi-h-right-border = <0>;
 		qcom,mdss-dsi-v-top-border = <0>;
@@ -1519,14 +1509,14 @@
 				15 01 00 00 00 00 02 EA FF
 				15 01 00 00 00 00 02 FF 00
 				15 01 00 00 00 00 02 FB 01
-				15 01 00 00 00 00 02 C2 08
+				15 01 00 00 00 00 02 C2 03
+				39 01 00 00 00 00 06 3B 03 02 03 08 04
 				15 01 00 00 00 00 02 BA 03
-				15 01 00 00 0A 00 02 35 00
 				05 01 00 00 32 00 01 11];
 		qcom,mdss-dsi-on-command = [05 01 00 00 00 00 01 29];
 		qcom,mdss-dsi-off-command = [05 01 00 00 00 00 01 28
 				05 01 00 00 78 00 01 10];
-		qcom,mdss-dsi-on-command-state = "dsi_hs_mode";
+		qcom,mdss-dsi-on-command-state = "dsi_lp_mode";
 		qcom,mdss-dsi-off-command-state = "dsi_hs_mode";
 
 		somc,mdss-dsi-cabc-early-on-command = [15 01 00 00 00 00 02 FF 04
@@ -1560,12 +1550,6 @@
 		qcom,mdss-dsi-lane-1-state;
 		qcom,mdss-dsi-lane-2-state;
 		qcom,mdss-dsi-lane-3-state;
-		qcom,mdss-dsi-te-pin-select = <1>;
-		qcom,mdss-dsi-wr-mem-start = <0x2c>;
-		qcom,mdss-dsi-wr-mem-continue = <0x3c>;
-		qcom,mdss-dsi-te-dcs-command = <1>;
-		qcom,mdss-dsi-te-check-enable;
-		qcom,mdss-dsi-te-using-te-pin;
 		qcom,mdss-dsi-panel-timings = [7a 1a 12 00 3e 42 16 20 14 03 04 00];
 		qcom,mdss-dsi-t-clk-post = <0x0c>;
 		qcom,mdss-dsi-t-clk-pre = <0x1a>;
@@ -1595,7 +1579,7 @@
 				00 c2 45 00 00 00 00 01 75
 				00 c2 45 00 00 00 00 01 75
 				00 02 45 00 00 00 00 01 97];
-		somc,mdss-dsi-disp-on-in-hs = <0>;
+		somc,mdss-dsi-disp-on-in-hs = <1>;
 		somc,mdss-dsi-init-from-begin = <1>;
 
 		somc,mdss-dsi-uv-command = [04 01 00 00 00 00 01 DA
@@ -1663,23 +1647,23 @@
 				0x07 0x00 0x28 0x3C 0x00 0x13 0x4d00 0x6600 0x5280>;
 	};
 
-	dsi_novatek_auo_720_cmd_new: somc,novatek_auo_720p_panel_new_id {
-		qcom,mdss-dsi-panel-name = "auo novatek 720p cmd new id";
+	dsi_novatek_auo_720_vid_new: somc,novatek_auo_720p_panel_new_id {
+		qcom,mdss-dsi-panel-name = "auo novatek 720p vid new id";
 		qcom,mdss-dsi-panel-controller = <&mdss_dsi0>;
-		qcom,mdss-dsi-panel-type = "dsi_cmd_mode";
+		qcom,mdss-dsi-panel-type = "dsi_video_mode";
 		qcom,mdss-dsi-panel-destination = "display_1";
 		qcom,mdss-dsi-panel-framerate = <60>;
 		qcom,mdss-dsi-virtual-channel-id = <0>;
 		qcom,mdss-dsi-stream = <0>;
 		qcom,mdss-dsi-panel-width = <720>;
 		qcom,mdss-dsi-panel-height = <1280>;
-		qcom,mdss-dsi-h-front-porch = <48>;
-		qcom,mdss-dsi-h-back-porch = <48>;
-		qcom,mdss-dsi-h-pulse-width = <48>;
+		qcom,mdss-dsi-h-front-porch = <136>;
+		qcom,mdss-dsi-h-back-porch = <4>;
+		qcom,mdss-dsi-h-pulse-width = <4>;
 		qcom,mdss-dsi-h-sync-skew = <0>;
-		qcom,mdss-dsi-v-back-porch = <32>;
-		qcom,mdss-dsi-v-front-porch = <32>;
-		qcom,mdss-dsi-v-pulse-width = <32>;
+		qcom,mdss-dsi-v-back-porch = <1>;
+		qcom,mdss-dsi-v-front-porch = <94>;
+		qcom,mdss-dsi-v-pulse-width = <1>;
 		qcom,mdss-dsi-h-left-border = <0>;
 		qcom,mdss-dsi-h-right-border = <0>;
 		qcom,mdss-dsi-v-top-border = <0>;
@@ -2140,14 +2124,14 @@
 				15 01 00 00 00 00 02 EA FF
 				15 01 00 00 00 00 02 FF 00
 				15 01 00 00 00 00 02 FB 01
-				15 01 00 00 00 00 02 C2 08
+				15 01 00 00 00 00 02 C2 03
+				39 01 00 00 00 00 06 3B 03 02 03 08 04
 				15 01 00 00 00 00 02 BA 03
-				15 01 00 00 0A 00 02 35 00
 				05 01 00 00 32 00 01 11];
 		qcom,mdss-dsi-on-command = [05 01 00 00 00 00 01 29];
 		qcom,mdss-dsi-off-command = [05 01 00 00 00 00 01 28
 				05 01 00 00 78 00 01 10];
-		qcom,mdss-dsi-on-command-state = "dsi_hs_mode";
+		qcom,mdss-dsi-on-command-state = "dsi_lp_mode";
 		qcom,mdss-dsi-off-command-state = "dsi_hs_mode";
 
 		somc,mdss-dsi-cabc-early-on-command = [15 01 00 00 00 00 02 FF 04
@@ -2181,12 +2165,6 @@
 		qcom,mdss-dsi-lane-1-state;
 		qcom,mdss-dsi-lane-2-state;
 		qcom,mdss-dsi-lane-3-state;
-		qcom,mdss-dsi-te-pin-select = <1>;
-		qcom,mdss-dsi-wr-mem-start = <0x2c>;
-		qcom,mdss-dsi-wr-mem-continue = <0x3c>;
-		qcom,mdss-dsi-te-dcs-command = <1>;
-		qcom,mdss-dsi-te-check-enable;
-		qcom,mdss-dsi-te-using-te-pin;
 		qcom,mdss-dsi-panel-timings = [7a 1a 12 00 3e 42 16 20 14 03 04 00];
 		qcom,mdss-dsi-t-clk-post = <0x0c>;
 		qcom,mdss-dsi-t-clk-pre = <0x1a>;
@@ -2216,7 +2194,7 @@
 				00 c2 45 00 00 00 00 01 75
 				00 c2 45 00 00 00 00 01 75
 				00 02 45 00 00 00 00 01 97];
-		somc,mdss-dsi-disp-on-in-hs = <0>;
+		somc,mdss-dsi-disp-on-in-hs = <1>;
 		somc,mdss-dsi-init-from-begin = <1>;
 
 		somc,mdss-dsi-uv-command = [04 01 00 00 00 00 01 DA
