--- a/arch/arm/boot/dts/dsi-panel-honami.dtsi
+++ b/arch/arm/boot/dts/dsi-panel-honami.dtsi
@@ -121,6 +121,12 @@
 				00 02 45 00 00 00 00 01 97];
 		somc,mdss-dsi-disp-on-in-hs = <1>;
 		somc,mdss-dsi-wait-time-before-on-cmd = <120>;
+		qcom,mdss-brightness-max-level = <255>;
+		somc,disp-en-off-pre = <10>;
+		somc,disp-en-off-post = <10>;
+		somc,disp-en-on-pre = <25>;
+		somc,pw-on-rst-seq = <0 10>, <1 10>;
+		somc,pw-off-rst-seq = <0 10>;
 	};
 
 	dsi_renesas_sharp_1080_vid: somc,renesas_sharp_1080p_panel {
@@ -233,6 +239,12 @@
 				00 02 45 00 00 00 00 01 97];
 		somc,mdss-dsi-disp-on-in-hs = <1>;
 		somc,mdss-dsi-wait-time-before-on-cmd = <150>;
+		qcom,mdss-brightness-max-level = <255>;
+		somc,disp-en-off-pre = <10>;
+		somc,disp-en-off-post = <10>;
+		somc,disp-en-on-pre = <25>;
+		somc,pw-on-rst-seq = <0 10>, <1 10>;
+		somc,pw-off-rst-seq = <0 10>;
 
 		somc,mdss-dsi-pre-uv-command = [29 01 00 00 00 00 02 B0 04];
 		somc,mdss-dsi-uv-command = [04 01 00 00 00 00 01 EF];
@@ -420,6 +432,7 @@
 				00 c2 45 00 00 00 00 01 75
 				00 02 45 00 00 00 00 01 97];
 		somc,mdss-dsi-disp-on-in-hs = <1>;
+		qcom,mdss-brightness-max-level = <255>;
 		somc,mdss-dsi-wait-time-before-on-cmd = <120>;
 
 		somc,mdss-dsi-pre-uv-command = [29 01 00 00 00 00 02 B0 04];
@@ -990,6 +1003,14 @@
 				00 02 45 00 00 00 00 01 97];
 		somc,mdss-dsi-disp-on-in-hs = <1>;
 		somc,mdss-dsi-wait-time-before-on-cmd = <120>;
+		somc,mdss-dsi-init-from-begin = <1>;
+		qcom,mdss-brightness-max-level = <255>;
+		somc,disp-en-off-pre = <10>;
+		somc,disp-en-off-post = <10>;
+		somc,disp-en-on-pre = <200>;
+		somc,disp-en-on-post = <10>;
+		somc,pw-on-rst-seq = <1 10>, <0 10>, <1 25>;
+		somc,pw-off-rst-seq = <0 10>;
 	};
 
 	dsi_novatek_jdc_1080_vid: somc,novatek_jdc_1080p_panel {
@@ -1473,6 +1494,13 @@
 				00 c2 45 00 00 00 00 01 75
 				00 02 45 00 00 00 00 01 97];
 		somc,mdss-dsi-disp-on-in-hs = <1>;
+		qcom,mdss-brightness-max-level = <255>;
+		somc,disp-en-off-pre = <10>;
+		somc,disp-en-off-post = <10>;
+		somc,disp-en-on-pre = <200>;
+		somc,disp-en-on-post = <10>;
+		somc,pw-on-rst-seq = <1 10>, <0 10>, <1 25>;
+		somc,pw-off-rst-seq = <0 10>;
 		somc,mdss-dsi-wait-time-before-on-cmd = <120>;
 
 		somc,mdss-dsi-uv-command = [04 01 00 00 00 00 01 DA
