--- a/arch/arm/configs/cm_rhine_honami_row_defconfig
+++ b/arch/arm/configs/cm_rhine_honami_row_defconfig
@@ -360,6 +360,7 @@ CONFIG_INPUT_GPIO=y
 # CONFIG_LEGACY_PTYS is not set
 # CONFIG_DEVMEM is not set
 # CONFIG_DEVKMEM is not set
+CONFIG_UID_CPUTIME=y
 CONFIG_SERIAL_MSM_HS=y
 CONFIG_HW_RANDOM_MSM=y
 CONFIG_MSM_ADSPRPC=y
